# lib/db/src/schema/companies.ts
@@ -14,14 +14,14 @@ export const companiesTable = pgTable("companies", {
   id: serial("id").primaryKey(),
   name: text("name").notNull(),
   domain: text("domain").notNull(),
-  industry: Array<string>("industry"),
+  industry: text("industry").array().notNull(),
   employeeCount: integer("employee_count").notNull(),
-  employeeRange: Array<string>(),
-  fundingStage: Array<string>(),
+  employeeRange: text("employee_range").array().notNull(),
+  fundingStage: text("funding_stage").array().notNull(),
   latestFundingDate: date("latest_funding_date", { mode: "string" }),
   fundingAmount: integer("funding_amount"),
   headquarters: text("headquarters"),
-  productCategory: Array<string>(),
+  productCategory: text("product_category").array().notNull(),
   technologyContext: text("technology_context").notNull(),
   growthSignal: text("growth_signal").notNull(),
   icpFitScore: doublePrecision("icp_fit_score").notNull(),
